chapter16/testapp/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: testapp-vs
  namespace: testapp
spec:
  hosts:
  - testapp.$hostip.nip.io
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: nginx-web
